tests/paczka1/small_fuzzy/23308802.err
Error in line 8: hTAfAClTYxl S415 63,6
Error in line 11: vLU3exkCnCZ S878 55,1
Error in line 10: hTAfAClTYxl S188 80,8
